# froozle-mpi

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
c/: .gitignore  Makefile.am  allgather_count.c  allgather_int.c  comm_rank.c  comm_size.c  finalize.c  get_elements_count.c  get_elements_int.c  get_elements_x.c  globals.c  globals.h  init.c  mpi-common.h  mpi.h  recv_count.c  recv_int.c  send_count.c  send_int.c
config/: .gitignore  Makefile.am  froozle_check_cc_c11.m4  froozle_fortran_check_ignore_tkr.m4
cxx/: Makefile.am  allgather_count.cc  allgather_int.cc  get_elements_count.cc  get_elements_int.cc  get_elements_x.cc  mpi.hpp  recv_count.cc  recv_int.cc  send_count.cc  send_int.cc
examples/: .gitignore  Makefile.am  example_c.c  example_cxx.cc  example_mpifh.F90  example_usempi.F90  example_usempi.f90  example_usempif08.F90  example_usempif08.f90
fortran-mpifh/: Makefile.am  allgather_int_mpifh.c  comm_rank_f.f90  comm_size_f.f90  finalize_f.f90  get_elements_f.F90  get_elements_x_f.F90  globals_f.c  init_f.f90  mpif-constants.h  mpif-handles.h  mpif-sentinels.h  mpif.h  recv_int_mpifh.c  send_int_mpifh.c
fortran-usempi/: .gitignore  Makefile.am  allgather_count_usempi.F90  allgather_int_usempi.F90  fortran-config.h.in  get_elements_count_usempi.F90  get_elements_int_usempi.F90  get_elements_x_usempi.F90  mpi-module.F90  mpi-module.F90.in  recv_count_usempi.F90  recv_int_usempi.F90  send_count_usempi.F90  send_int_usempi.F90
fortran-usempif08/: .gitignore  Makefile.am  allgather_count_usempif08.F90  allgather_int_usempif08.F90  comm_rank_usempif08.f90  comm_size_usempif08.f90  finalize_usempif08.f90  get_elements_count_usempif08.F90  get_elements_int_usempif08.F90  get_elements_x_usempif08.F90  globals-usempif08.c  init_usempif08.f90  mpi-f08-module.F90  mpi-f08-module.F90.in  mpi-f08-types-module.F90  recv_count_usempif08.F90  recv_int_usempif08.F90  send_count_usempif08.F90  send_int_usempif08.F90
include/: .gitignore  Makefile.am  froozle_config_fortran.h.in  mpi-common.h  mpi-config.h.in  mpi.h  mpi.h.in  mpif-constants.h  mpif-handles.h
