# Copyright (c) 2019 Cisco Systems, Inc.  All rights reserved.

lib_LTLIBRARIES = libmpi_mpifh.la

libmpi_mpifh_la_SOURCES = \
        mpif.h \
        allgather_int_mpifh.c \
        comm_rank_f.f90 \
        comm_size_f.f90 \
        finalize_f.f90 \
        globals_f.c \
        init_f.f90 \
        recv_int_mpifh.c \
        send_int_mpifh.c
